--- a/Styles/app.css
+++ b/Styles/app.css
@@ -1,9 +1,13 @@
-@import "../Pages/Index.razor.css";
+@import "..\obj\Debug\net7.0\scopedcss\bundle\BlazeWind.styles.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 * {
   @apply font-sans font-normal;
+}
+
+pre {
+  font-size: 12px !important;
 }
 
 #blazor-error-ui {
