Minor Fix: Move to dev

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -388,7 +388,7 @@ theme: {
             <div class=" px-4 mb-10 lg:mb-0">
                 <h2 class="text-4xl font-bold mb-4">
                     Authored by <a href="https://www.linkedin.com/in/sharaf-mansour-4a16941b0/">Sharaf El Dean Mohamed</a> And <a href="https://www.linkedin.com/in/mohamed-ragab-5257121a6/"> Mohamed Ragab </a> @@2023
-                    <a href="https://github.com/Sharaf-Mansour/BlazeWind">Open Source</a>
+                    <a href="https://github.com/Sharaf-Mansour/BlazeWind">Open Source V0.1.1</a>
                 </h2>
             </div>
         </div>
