--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -9,7 +9,6 @@
         </div>
     </nav>
 </header>
-
 <section class="bg-gray-200 py-10">
     <div class="container mx-auto px-4">
         <div class="flex flex-wrap -mx-4">
@@ -129,13 +128,15 @@
                 <pre class="bg-gray-200 p-4 rounded-lg text-gray-600">
 <code>
 module.exports = {
-content:["./**/*.{razor,html,cshtml,css}"],
-theme: {
-    extend: { },
-    plugins: [],
-    }
-};
-    </code>
+  content: [
+        "./**/*.{razor,html,cshtml,css}"
+  ],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+}
+</code>
 </pre>
                 <p class="mb-4">
                     The content property is an array of file globs
@@ -220,7 +221,7 @@ theme: {
                     our
                     updated package.json file might look like:
                 </p>
-                <pre class="bg-gray-100 rounded-md p-4 my-4 text-sm sm:text-base md:text-lg lg:text-xl">
+                <pre class="bg-gray-100 rounded-md p-4 my-4 text-sm">
 {
   "name": "blazewind",
   "version": "1.0.0",
@@ -229,12 +230,14 @@ theme: {
     "build": "dotnet build",
     "dev": "concurrently  \"sass Styles:Styles --no-source-map -w \"
     \"npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify --watch \"
+    \"npx tailwindcss -i ./obj/Debug/net7.0/scopedcss/bundle/BlazeWind.styles.css  -o
+     ./obj/Debug/net7.0/scopedcss/bundle/BlazeWind.styles.css --minify --watch\" 
     \"cross-env DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1 dotnet watch\""
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "concurrently": "^7.6.0",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.7"
@@ -339,11 +342,7 @@ theme: {
                 <pre class="bg-gray-200 p-4 rounded-md text-sm sm:text-base md:text-lg lg:text-xl"><code class="language-css">@@tailwind base;
 @@tailwind components;
 @@tailwind utilities;
-@@import "..\obj\Debug\net7.0\scopedcss\bundle\BlazeWind.styles.css";
 </code></pre>
-                <p>
-                    Make sure to remove the scoped CSS file from the head, And import it as shown above.
-                </p>
                 <p>
                     By importing our SCSS files manually, we can use the @@apply
                     feature of Tailwind CSS within our Blazor components. This
@@ -351,7 +350,6 @@ theme: {
                     elements without having to write custom CSS for each
                     component.
                 </p>
-
                 <p>
                     To build our Blazor application, we can run the following
                     command in our terminal:
@@ -387,8 +385,8 @@ theme: {
         <div class="flex flex-wrap -mx-4">
             <div class=" px-4 mb-10 lg:mb-0">
                 <h2 class="text-4xl font-bold mb-4">
-                    Authored by <a href="https://www.linkedin.com/in/sharaf-mansour-4a16941b0/">Sharaf El Dean Mohamed</a> And <a href="https://www.linkedin.com/in/mohamed-ragab-5257121a6/"> Mohamed Ragab </a> @@2023
-                    <a href="https://github.com/Sharaf-Mansour/BlazeWind">Open Source V0.1.1</a>
+                    Authored by <a href="https://www.linkedin.com/in/sharaf-mansour-4a16941b0/">Sharaf El Dean Mohamed</a> @@2023
+                    <a href="https://github.com/Sharaf-Mansour/BlazeWind">Open Source V0.1.2</a>
                 </h2>
             </div>
         </div>
