--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -378,8 +378,8 @@ module.exports = {
         <div class="flex flex-wrap -mx-4">
             <div class=" px-4 mb-10 lg:mb-0">
                 <h2 class="text-4xl font-bold mb-4">
-                    Authored by <a href="https://www.linkedin.com/in/sharaf-mansour-4a16941b0/">Sharaf El Dean Mohamed</a> @@2023
-                    <a href="https://github.com/Sharaf-Mansour/BlazeWind">Open Source V0.1.2</a>
+                    Authored by <a href="https://www.linkedin.com/in/sharaf-mansour-4a16941b0/" target="_blank">Sharaf El Dean Mohamed</a> @@2023
+                    <a href="https://github.com/Sharaf-Mansour/BlazeWind"  target="_blank">Open Source V0.1.3</a>
                 </h2>
             </div>
         </div>
